<resources>
    <string name="app_name">LzyWanAndroid</string>
    <string name="app_copyright">CREATE  BY  LAZYLEE</string>

    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="login">登录</string>
    <string name="fast_register">快速注册</string>

    <!-- Strings related to register -->
    <string name="register">注册</string>
    <string name="user_repassword">确认密码</string>

    <!-- Strings related to main activity-->
    <string name="title_activity_main">首页</string>
    <string name="bottom_nav_home">主页</string>
    <string name="bottom_nav_guide">导航</string>
    <string name="bottom_nav_project">项目</string>
    <string name="toolbar_history">阅读历史</string>
    <string name="toolbar_search">搜索</string>
    <string name="left_nav_logout">退出登录</string>
    <string name="left_nav_tree">知识体系</string>
    <string name="left_nav_tools">常用工具</string>
    <string name="left_nav_about">关于</string>
    <string name="left_nav_bug_report">提交bug</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>

    <!-- String  related to home fragment-->
    <string name="state_load_again">重新加载</string>
    <string name="state_load_more">正在加载更多</string>

    <!-- Strings related to article item-->
    <string name="article_item_text_author">作者:</string>
    <string name="article_item_text_type">分类:</string>
    <string name="article_item_text_date">时间:</string>
    <string name="empty_page">页面为空</string>

    <!-- Strings related to SearchActivity -->
    <string name="search_text_hint">搜索</string>
    <string name="search_back_btn">返回按钮</string>
    <string name="search_close_btn">清空输入</string>
    <string name="search_btn">搜索按钮</string>

    <!-- Strings related to LzyToast-->
    <string name="toast_error">错误提示</string>
    <string name="toast_alert">风险提示</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- android shortcut -->
    <string name="search_shortcut_short_label1">搜索</string>
    <string name="search_shortcut_long_label1">搜索你感兴趣的内容</string>
    <string name="search_disabled_message1">搜索快捷方式暂时不可用，请打开app进入搜索界面来搜索</string>
</resources>
