<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/article_recycle_item_margin"
    android:paddingRight="@dimen/article_recycle_item_margin"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:background="@drawable/ripple_recycle_item_bg"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/article_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/colorTextTitle"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/article_item_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/article_item_text_author"
        android:paddingRight="4dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_item_title" />

    <TextView
        android:id="@+id/article_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/article_item_text_type"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/article_item_author"
        app:layout_constraintStart_toEndOf="@+id/article_item_author"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/article_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/article_item_text_date"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/article_item_author"
        app:layout_constraintStart_toEndOf="@+id/article_item_type"
        android:layout_marginLeft="8dp" />

</android.support.constraint.ConstraintLayout>